--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         externalNativeBuild {
             cmake {
                 cppFlags ""
-                abiFilters "armeabi-v7a", "arm64-v8a"
+                abiFilters  "arm64-v8a"
             }
         }
     }
@@ -36,18 +36,19 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    viewBinding {
+        enabled = true
+    }
+
     externalNativeBuild {
         cmake {
             path "CMakeLists.txt"
         }
     }
 
-    packagingOptions {
-        pickFirst 'lib/armeabi-v7a/libijkffmpeg.so'
-        pickFirst 'lib/arm64-v8a/libijkffmpeg.so'
-        pickFirst 'lib/armeabi-v7a/libffmpeg.so'
-        pickFirst 'lib/arm64-v8a/libffmpeg.so'
-    }
+
+
 
 }
 
@@ -61,6 +62,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation "io.reactivex.rxjava2:rxjava:2.2.21"
 
 }
